--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -9,32 +9,25 @@ WORKDIR /var/www/app
 # Instalação de pacotes
 # ------------------------------------------------------------------------------
 
-RUN apt-get update
-RUN apt-get install -y zlib1g-dev \
-   libxml2-dev \
-   nano \
-   cron \
-   libpng-dev \
-   libpq-dev \
-   libc-client-dev \
-   libkrb5-dev \
-   wget \
-   supervisor \
-   git \
-   gnupg \
-   bzip2 \
-   rsync && \
-   apt-get clean -y
-
-# ------------------------------------------------------------------------------
-# Habilitação da extensão ZIP
-# ------------------------------------------------------------------------------
-# RUN pecl install zip && echo "extension=zip.so" > /usr/local/etc/php/conf.d/zip.ini
+RUN apt-get update && \
+    apt-get install -y \
+    zlib1g-dev \
+    libxml2-dev \
+    nano \
+    cron \
+    libpng-dev \
+    libpq-dev \
+    curl \
+    wkhtmltopdf \
+    libfreetype6-dev \
+    libjpeg62-turbo-dev \
+    rsync && \
+    apt-get clean -y
 
 # ------------------------------------------------------------------------------
 # Habilitação de extensões php
 # ------------------------------------------------------------------------------
-RUN docker-php-ext-install pdo_pgsql pgsql pdo_mysql mysqli
+RUN docker-php-ext-install pdo_pgsql pgsql pdo_mysql mysqli zip
 
 # ------------------------------------------------------------------------------
 # Instalar o composer
