--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,13 +1,6 @@
-FROM php:7.3-apache
-
-# ------------------------------------------------------------------------------
-# Criar diretório
-# ------------------------------------------------------------------------------
+FROM php:7.2-apache
+ENV TERM=xterm
 WORKDIR /var/www/app
-
-# ------------------------------------------------------------------------------
-# Instalação de pacotes
-# ------------------------------------------------------------------------------
 
 RUN apt-get update && \
     apt-get install -y \
@@ -24,18 +17,15 @@ RUN apt-get update && \
     rsync && \
     apt-get clean -y
 
-# ------------------------------------------------------------------------------
-# Habilitação de extensões php
-# ------------------------------------------------------------------------------
-RUN docker-php-ext-install pdo_pgsql pgsql pdo_mysql mysqli zip
-
-# ------------------------------------------------------------------------------
-# Instalar o composer
-# ------------------------------------------------------------------------------
 RUN curl -sS https://getcomposer.org/installer | php
 RUN mv composer.phar /usr/local/bin/composer
 
-# ------------------------------------------------------------------------------
-# ServerName para evitar erros, e habilitação de extensões do PHP
-# ------------------------------------------------------------------------------
-RUN echo 'ServerName localhost' >> /etc/apache2/apache2.conf && a2enmod rewrite ssl
+RUN echo 'ServerName localhost' >> /etc/apache2/apache2.conf && \
+    a2enmod rewrite
+
+RUN docker-php-ext-install pdo_pgsql pgsql soap zip
+
+RUN yes | pecl install xdebug \
+    && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini
+
+RUN chmod 777 -R /var/www
